--- a/examples/wcgphone.html
+++ b/examples/wcgphone.html
@@ -70,7 +70,7 @@
 <!--////////////////////////    PRE-FORMATTED CODE  /////////////////////////-->
 <pre>
 <span id="code-login">$("#login").click(function () {
-  window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=cdoso6wgycs073sk5zpmacgxuxc7mezz&response_type=token&scope=profile,webrtc&redirect_uri=http://localhost/examples/wcgphone.html";
+  window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=6no7qyrt3joiux1hi5hwkibcrtj6efp4&response_type=token&scope=profile,webrtc&redirect_uri=http://att.innovate.github.io/att.js/examples/wcgphone.html";
 });</span>
 
 <span id="code-logout">$("#logout").click(function() {
@@ -354,7 +354,7 @@
 
         $("#login").click(function () {
                 $("#code-login").css("color", "#3498db");
-                window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=cdoso6wgycs073sk5zpmacgxuxc7mezz&response_type=token&scope=profile,webrtc&redirect_uri=http://localhost/examples/wcgphone.html";
+                window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=6no7qyrt3joiux1hi5hwkibcrtj6efp4&response_type=token&scope=profile,webrtc&redirect_uri=http://att.innovate.github.io/att.js/examples/wcgphone.html";
 
         });
 
