Client ID updated for sample app wcgvideo.html

--- a/examples/wcgvideo.html
+++ b/examples/wcgvideo.html
@@ -322,7 +322,7 @@ $(document).ready(function () {
 
     $("#login").click(function () {
         $("#code-login").css("color", "#3498db");
-        window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=kdbaxzfairnbiezp0q5yacx2spnxm2jo&response_type=token&scope=profile,webrtc&redirect_uri=http://localhost/examples/wcgvideo.html";
+        window.location.href = "https://auth.tfoundry.com/oauth/authorize?client_id=mhyblzwt0xhm0iquqbwycbzpvs71uepd&response_type=token&scope=profile,webrtc&redirect_uri=http://att-innovate.github.io/att.js/examples/wcgvideo.html";
 
     });
 
