Updated sample app WCG Incoming Call

--- a/examples/wcgincomingcall.html
+++ b/examples/wcgincomingcall.html
@@ -72,9 +72,9 @@
     $(document).ready(function () {
 
         window.att = new ATT({
-            clientID: "6s2gls5gvvvbvasatjx2glhftwede4ng",
+            clientID: "z14oyvhsvhtassujloknnlyi9npsd9q6",
             scope: 'profile,webrtc',
-            redirectURI: "http://localhost/examples/wcgincomingcall.html",
+            redirectURI: "http://att-innovate.github.io/att.js/examples/wcgincomingcall.html",
             server: "webims"
         });
 
