--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav nav-list">
                     <li class="nav-header">Examples</li>
                     <li><a href="examples/wcgphone.html">Make a phone call</a></li>
-                    <li><a href="examples/wcgincomingcall.html">Receiving a phone call</a></li>
+                    <li><a href="examples/wcgincomingcall.html">Receive a phone call</a></li>
                     <li><a href="examples/wcgvideo.html">Make a video call</a></li>
                 </ul>
             </div>
