--- a/examples/wcgincomingcall.html
+++ b/examples/wcgincomingcall.html
@@ -16,9 +16,9 @@
     <script src="../src/att.phonenumber.js"></script>
 
 
-    <script src="../vendor/wcg/BrowserDetect.js"></script>
-    <script src="../vendor/wcg/WCGapi.js"></script>
-    <script src="../vendor/wcg/att.wcg.js"></script>
+    <script src="../vendor/BrowserDetect.js"></script>
+    <script src="../vendor/WCGapi.js"></script>
+    <script src="../vendor/att.wcg.js"></script>
 
 
 </head>
