add "Receive Video Call" in the list of examples

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <li><a href="examples/wcgphone.html">Make a phone call</a></li>
                     <li><a href="examples/wcgincomingcall.html">Receive a phone call</a></li>
                     <li><a href="examples/wcgvideo.html">Make a video call</a></li>
+                    <li><a href="examples/wcgincomingvideo.html">Receive a video call</a></li>
                 </ul>
             </div>
         </div>
