--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="main" class='container-fluid'>
     <div class="row">
         <div class="span6">
-            <h3>WCG Sample Apps</h3>
+            <h3>att.js Sample Apps</h3>
             <div class="well">
                 <ul class="nav nav-list">
                     <li class="nav-header">Examples</li>
