--- a/examples/a-phone/public/spa.html
+++ b/examples/a-phone/public/spa.html
@@ -3,7 +3,7 @@
 <html lang="en"  ng-app="app">
 <head>
   <meta charset="utf-8">
-  <title>WebRTC Node-Phone</title>
+  <title>WebRTC Angular-Phone</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -40,7 +40,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">WebRTC Node-Phone</a>
+            <a class="brand" href="#">WebRTC Angular-Phone</a>
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -65,7 +65,9 @@
         <div class="well" ng-view>
 <!--             <h1>Bootstrap starter template</h1>
             <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
- -->        </div> <!-- /well -->
+
+ -->
+         </div> <!-- /well -->
 
     </div> <!-- /container -->
 
