Fix the library path in wcgvideo.html

--- a/examples/wcgvideo.html
+++ b/examples/wcgvideo.html
@@ -15,9 +15,9 @@
     <script src="../src/att.phonenumber.js"></script>
 
 
-    <script src="../vendor/wcg/BrowserDetect.js"></script>
-    <script src="../vendor/wcg/WCGapi.js"></script>
-    <script src="../vendor/wcg/att.wcg.js"></script>
+    <script src="../vendor/BrowserDetect.js"></script>
+    <script src="../vendor/WCGapi.js"></script>
+    <script src="../vendor/att.wcg.js"></script>
 
 
 </head>
@@ -44,7 +44,7 @@
 
                     <div class="control-group">
                         <label for="number">to</label>
-                        <input type="text" id="number" class="input-medium" type="" value="sip:stoffe@webims.tfoundry.com"/>
+                        <input type="text" id="number" class="input-medium" type="" value="sip:name@appname.api.att.net"/>
                     </div>
 
                     <div>
