--- a/examples/a-phone/public/spa.html
+++ b/examples/a-phone/public/spa.html
@@ -16,6 +16,7 @@
   }
   </style>
   <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
