--- a/examples/a-phone/public/spa.html
+++ b/examples/a-phone/public/spa.html
@@ -51,7 +51,7 @@
               <ul class="nav pull-right">
                 <li class="divider-vertical"></li>
                 <li>
-                  <a href=""ng-click="login()" class="btn-play">
+                  <a href="" ng-click="login()" class="btn-play">
                    <strong>{{loginState}}</strong>
                  </a>
                </li>
@@ -62,15 +62,8 @@
        </div>
      </div>
 
-     <div class="container">
-        <div class="well" ng-view>
-<!--             <h1>Bootstrap starter template</h1>
-            <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
- -->
-         </div> <!-- /well -->
-
-    </div> <!-- /container -->
+     <div class="container-fluid" ng-view>
+     </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
