--- a/examples/a-phone/public/spa.html
+++ b/examples/a-phone/public/spa.html
@@ -67,22 +67,17 @@
           <div class="span3" ng-show="loggedIn">
             <div class="well sidebar-nav">
               <ul class="nav nav-list">
-                <li class="nav-header">Sidebar</li>
+                <li class="nav-header">Personal</li>
                 <li class="active"><a href="#">Link</a></li>
+                <li><a href="#">Personal</a></li>
+                <li><a href="#">Links</a></li>
                 <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="nav-header">Sidebar</li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
+                <li class="nav-header">Sub-Group2</li>
+                <li><a href="#">Personal</a></li>
+                <li><a href="#">Links</a></li>
+                <li class="nav-header">Sub-Group3</li>
+                <li><a href="#">Personal</a></li>
+                <li><a href="#">Links</a></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->      
